# knightty

./: AGENT.md  Cargo.toml
.github/workflows/: unix-pty.yml
crates/app/: Cargo.toml
crates/app/src/: config.rs  config_spec.rs  graphics_diagnostics.rs  inline_image.rs  input.rs  lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/demo/: Cargo.toml  README.md
crates/demo/assets/: README.md
crates/demo/src/: canvas.rs  cli.rs  encoder.rs  main.rs  metrics.rs  player.rs  raster.rs  terminal.rs
crates/demo/src/animation/: asset.rs  knight.rs  mod.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/pty/tests/: unix_apc.rs  windows_conpty_apc.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: demo_assets.rs  main.rs
docs/: IME-compatibility-groundwork.md  Knightty Demo Phase 1.5.md  Knightty Demo Phase 1.6 — Flowing Cape Animation Redesign.md  PHASE1.md  PHASE2.md  PHASE3-B.md  PHASE3.md  PHASE4-A.md  PHASE4-B.md  PHASE4-C.md  PHASE4-D.md  PHASE4-E.md  Phase 4-F2 Kitty Graphics Protocol - Direct Transmission MVP.md  Phase 4-F3 Kitty Multipart Direct Transmission.md  Phase 4-F4.md  Phase 4-F5.md  Phase 4-F6.md  cell-span-protocol.md  generate-config-reference.md  gui-smoke-suite.md  image-compatibility.md  input-router-refactor.md  knightty-appearance-improvement-plan.md  knightty-demo Phase 1 実装計画.md  performance-demo.md  phase-4-f1-inline-image-foundation.md  phase1-smoke-test.md
docs/dev/: config-reference-generation.md  keyboard-ime-compatibility.md  probe-kitty-apc.ps1  show-cell-span.ps1  show-inline-png.ps1  show-kitty-png.ps1  terminal-compatibility-smoke.md  windows-test-runner-notes.md
docs/site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/site/src/components/: ConfigReferenceApp.tsx
docs/site/src/content/docs/: index.mdx
docs/site/src/data/: config-reference.fixture.json
docs/site/src/lib/: config-reference-types.ts  config-reference.ts  slug.ts
docs/site/src/pages/config/: reference.astro
docs/site/src/styles/: config-reference.css
