[workspace]
resolver = "3"
members = [
    "crates/app",
    "crates/core",
    "crates/demo",
    "crates/proto",
    "crates/pty",
    "crates/render",
    "crates/xtask"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["SingUp_009"]
description = "A terminal emulator written in Rust."

[workspace.dependencies]
