[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "knightty"
path = "src/main.rs"

[dependencies]
arboard = { version = "3", default-features = false }
knightty_core = { package = "core", version = "0.1.0", path = "../core" }
knightty_pty = { package = "pty", version = "0.1.0", path = "../pty" }
knightty_render = { package = "render", version = "0.1.0", path = "../render" }
open = "5.3.5"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
url = "2.5.8"
wgpu = "29.0.3"
winit = "0.30.13"
