[package]
name = "render"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
name = "knightty_render"
path = "src/lib.rs"

[dependencies]
knightty_core = { package = "core", version = "0.1.0", path = "../core" }
bytemuck = { version = "1.25.0", features = ["derive"] }
glyphon = "0.11.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
thiserror = "2.0.18"
unicode-width = "0.2.2"
wgpu = "29.0.3"
